Added partial derivatives

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "terminal.integrated.automationProfile.windows": {}
+    "terminal.integrated.automationProfile.windows": {},
+    "python.analysis.typeCheckingMode": "basic"
 }
